# Alfred-2

./: .gitignore  Cargo.toml  README.md  flake.nix
resources/: dolphins.txt
src/: commands.rs  config.rs  errors.rs  main.rs  state.rs
src/commands/: admin.rs  mod.rs  typst.rs
